Fix position of overview on mobile

--- a/client/app/components/OverviewVis/OverviewVis.scss
+++ b/client/app/components/OverviewVis/OverviewVis.scss
@@ -19,4 +19,5 @@ $overview-height: 5px;
 
 .overview-wrapper {
   height: $overview-height;
+  font-size: 0;  // this fixes an odd gap that appears at the top
 }
